--- a/config_arona.json
+++ b/config_arona.json
@@ -1,31 +1,66 @@
 {
-  "num_qubits_per_node": 4,
-  "simulation_shots": 15,
-  "training_epochs": 5,
-  "learning_rate_classical": 0.008,
-  "learning_rate_quantum": 0.002,
+  "num_qubits_per_node": 2,
+  "simulation_shots": 30,
+  "training_epochs": 10,
+  "learning_rate_classical": 0.01,
+  "learning_rate_quantum": 0.005,
   "dataset_files": [
-    "./training_data/philosophy_basics.txt",
-    "./training_data/ethics_ai.md"
+    "./training_data/sample1.txt",
+    "./training_data/ethics_ai.md",
+    "./training_data/philosophy_basics.txt"
   ],
   "chunk_size": 450,
-  "chunk_overlap": 50,
-  "embedding_dim": 64,
-  "checkpoint_dir": "./checkpoints_arona_run1",
-  "log_db_path": "training_arona_run1.db",
+  "chunk_overlap": 100,
+  "embedding_dim": 256,
+  "checkpoint_dir": "./checkpoints_arona_sample1_nq2",
+  "log_db_path": "training_arona_sample1_nq2.db",
   "auto_load_latest_checkpoint": true,
+  "feedback_weight_activation": 0.6,
+  "feedback_weight_emotion": 0.4,
+  "update_weight_activation_error": 0.7,
+  "update_weight_emotion_error": 0.3,
+  "arousal_error_weight_rz": 0.2,
+  "dominance_error_weight_rz": 0.2,
+  "enable_dynamic_shots": true,
+  "stagnation_threshold_loss": 0.005,
+  "shots_increase_factor": 1.5,
+  "shots_decrease_factor": 0.95,
+  "max_simulation_shots": 50,
+  "min_simulation_shots": 3,
+  "jump_rate_threshold_for_shot_decrease": 0.1,
+  "loss_improvement_threshold_for_jump": -0.01,
+  "feedback_lr_scaling_factor": 0.5,
+  "log_interval_chunks": 100,
+  "enable_perturbation": true,
+  "perturbation_std_dev": 0.03,
+  "randomize_shots": true,
+  "shot_random_min": -1,
+  "shot_random_max": 2,
+  "enable_jump_boost": true,
+  "jump_threshold_high": 2,
+  "jump_boost_lr_factor_high": 1.4,
+  "jump_boost_lr_factor_low": 1.1,
+  "jump_lr_dampen_factor": 0.98,
+  "enable_variance_trigger": true,
+  "variance_threshold_low": 0.5,
+  "use_hebbian_learning": true,
+  "hebb_history_window": 3,
+  "hebb_threshold_high": 0.55,
+  "hebb_threshold_low": 0.30,
+  "hebb_reg_factor": 0.001,
+  "activation_history_len": 50,
   "network_structure": {
     "nodes": [
-      {"label": "Limbus Affektus", "class": "LimbusAffektus", "num_qubits": 4},
-      {"label": "Meta Cognitio", "class": "MetaCognitio", "num_qubits": 4},
-      {"label": "Cortex Criticus", "class": "CortexCriticus", "num_qubits": 4},
-      {"label": "Cortex Creativus", "class": "CortexCreativus", "num_qubits": 4},
-      {"label": "Simulatrix Neuralis", "class": "SimulatrixNeuralis", "num_qubits": 4},
-      {"label": "Cortex Socialis", "class": "CortexSocialis", "num_qubits": 4},
-      {"label": "Philosophie", "class": "MemoryNode", "num_qubits": 4},
-      {"label": "Ethik", "class": "MemoryNode", "num_qubits": 4},
-      {"label": "Technologie", "class": "MemoryNode", "num_qubits": 4},
-      {"label": "Bewusstsein", "class": "MemoryNode", "num_qubits": 4},
+      {"label": "Limbus Affektus", "class": "LimbusAffektus", "num_qubits": 2},
+      {"label": "Meta Cognitio", "class": "MetaCognitio", "num_qubits": 2},
+      {"label": "Cortex Criticus", "class": "CortexCriticus", "num_qubits": 2},
+      {"label": "Cortex Creativus", "class": "CortexCreativus", "num_qubits": 2},
+      {"label": "Simulatrix Neuralis", "class": "SimulatrixNeuralis", "num_qubits": 2},
+      {"label": "Cortex Socialis", "class": "CortexSocialis", "num_qubits": 2},
+      {"label": "Philosophie", "class": "MemoryNode", "num_qubits": 2},
+      {"label": "Ethik", "class": "MemoryNode", "num_qubits": 2},
+      {"label": "Technologie", "class": "MemoryNode", "num_qubits": 2},
+      {"label": "Bewusstsein", "class": "MemoryNode", "num_qubits": 2},
       {"label": "Ziel_Rationalitaet", "class": "ValueNode", "initial_value": 0.6},
       {"label": "Ziel_Empathie", "class": "ValueNode", "initial_value": 0.4}
     ],
