--- a/config_arona.json
+++ b/config_arona.json
@@ -1,19 +1,25 @@
 {
-  "num_qubits_per_node": 2,
+  "num_qubits_per_node": 5,
   "simulation_shots": 30,
-  "training_epochs": 1,
-  "learning_rate_classical": 0.01,
-  "learning_rate_quantum": 0.005,
+  "training_epochs": 30,
+  "learning_rate_classical": 0.025,
+  "learning_rate_quantum": 0.015,
   "dataset_files": [
     "./training_data/sample1.txt",
     "./training_data/ethics_ai.md",
-    "./training_data/philosophy_basics.txt"
+    "./training_data/philosophy_basics.txt",
+	"./training_data/books_markdown/frankenstein.md",
+	"./training_data/books_markdown/platon_dialoge.md",
+	"./training_data/books_markdown/zarathustra.md",
+	"./training_data/books_markdown_de/frankenstein.md",
+	"./training_data/books_markdown_de/platon_dialoge.md",
+	"./training_data/books_markdown_de/zarathustra.md"		
   ],
-  "chunk_size": 450,
-  "chunk_overlap": 100,
-  "embedding_dim": 256,
-  "checkpoint_dir": "./checkpoints_arona_sample1_nq2",
-  "log_db_path": "training_arona_sample1_nq2.db",
+  "chunk_size": 900,
+  "chunk_overlap": 30,
+  "embedding_dim": 512,
+  "checkpoint_dir": "./checkpoints_arona_run_nq5",
+  "log_db_path": "training_arona_run_nq5.db",
   "auto_load_latest_checkpoint": true,
   "feedback_weight_activation": 0.6,
   "feedback_weight_emotion": 0.4,
@@ -22,10 +28,11 @@
   "arousal_error_weight_rz": 0.2,
   "dominance_error_weight_rz": 0.2,
   "enable_dynamic_shots": true,
-  "stagnation_threshold_loss": 0.005,
-  "shots_increase_factor": 1.5,
-  "shots_decrease_factor": 0.95,
-  "max_simulation_shots": 50,
+  "stagnation_threshold_loss": 0.0008,
+  "shots_increase_factor": 1.3,
+  "loss_band_persistence_enabled": false,
+  "shots_decrease_factor": 0.9,
+  "max_simulation_shots": 100,
   "min_simulation_shots": 3,
   "jump_rate_threshold_for_shot_decrease": 0.1,
   "loss_improvement_threshold_for_jump": -0.01,
@@ -37,17 +44,17 @@
   "shot_random_min": -1,
   "shot_random_max": 2,
   "enable_jump_boost": true,
-  "jump_threshold_high": 2,
+  "jump_threshold_high": 20,
   "jump_boost_lr_factor_high": 1.4,
   "jump_boost_lr_factor_low": 1.1,
   "jump_lr_dampen_factor": 0.98,
   "enable_variance_trigger": true,
-  "variance_threshold_low": 0.5,
+  "variance_threshold_low": 4.0,
   "use_hebbian_learning": true,
   "hebb_history_window": 3,
   "hebb_threshold_high": 0.55,
-  "hebb_threshold_low": 0.30,
-  "hebb_reg_factor": 0.001,
+  "hebb_threshold_low": 0.20,
+  "hebb_reg_factor": 0.002,
   "activation_history_len": 50,
   "network_structure": {
     "nodes": [
